--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+#button{
+    border:  2px solid;
+    padding:  5px 15px;
+    border-radius:  15px;
+}
